# template_python

./: cookiecutter.json
{{cookiecutter.name}}/: .flake8  .pre-commit-config.yaml  README.rst  pyproject.toml
{{cookiecutter.name}}/tests/: test_okta.py  test_{{cookiecutter.name}}.py
