[tool.poetry]
name = "{{cookiecutter.name}}"
version = "{{cookiecutter.version}}"
description = ""
authors = ["{{cookiecutter.author}}"]

[tool.poetry.dependencies]
python = "{{cookiecutter.minimum_python_version}}"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile="black"
